--- a/battery_registration.html
+++ b/battery_registration.html
@@ -200,6 +200,55 @@
                             </div>
                         </div>
                     </section>
+                    
+                    <!-- Cell Configuration Section -->
+<section class="form-section bg-white rounded-xl shadow-lg p-6">
+    <div class="flex items-center space-x-3 mb-6">
+        <div class="bg-blue-100 p-2 rounded-lg">
+            <svg class="w-5 h-5 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm4 2a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
+            </svg>
+        </div>
+        <div>
+            <h2 class="text-xl font-semibold text-gray-900">Cell Configuration</h2>
+            <p class="text-sm text-gray-500">Cell type, quantity, position, and individual capacity</p>
+        </div>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="input-group">
+            <label class="block text-sm font-medium text-gray-700 mb-2">Cell Type *</label>
+            <select class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                <option selected>18650</option>
+                <option>21700</option>
+                <option>32700</option>
+                <option>Pouch Cell</option>
+                <option>Prismatic Cell</option>
+            </select>
+        </div>
+
+        <div class="input-group">
+            <label class="block text-sm font-medium text-gray-700 mb-2">No. of Cells *</label>
+            <input type="number" value="128" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+        </div>
+
+        <div class="input-group">
+            <label class="block text-sm font-medium text-gray-700 mb-2">Cell Capacity (Ah)</label>
+            <input type="number" value="3.2" step="0.1" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+        </div>
+
+        <div class="input-group">
+            <label class="block text-sm font-medium text-gray-700 mb-2">Configuration (Series × Parallel)</label>
+            <input type="text" value="16S8P" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="e.g., 16S8P">
+        </div>
+
+        <div class="input-group lg:col-span-2">
+            <label class="block text-sm font-medium text-gray-700 mb-2">Cell Position/Arrangement Notes</label>
+            <textarea rows="3" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="e.g., Cells arranged in 4 rows, 32 cells per row, vertically stacked.">Cells arranged in 4 rows, 32 cells per row, vertically stacked.</textarea>
+        </div>
+    </div>
+</section>
+
 
                     <!-- Physical Specifications -->
                     <section class="form-section bg-white rounded-xl shadow-lg p-6">
