Updated the Compliance Certificate Number

--- a/battery_registration.html
+++ b/battery_registration.html
@@ -386,11 +386,11 @@
                             <div class="input-group">
                                 <label class="block text-sm font-medium text-gray-700 mb-2">Certifications</label>
                                 <div class="flex flex-wrap gap-2 mb-4">
-                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">UN38.3</span>
-                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">CE</span>
-                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">FCC</span>
-                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">UL 2054</span>
+                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">AIS 156</span>
+                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">AIS 038 Rev 2</span>
+                                    <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">UN 38.3</span>
                                     <span class="bg-blue-100 text-blue-800 text-sm px-3 py-1 rounded-full">IEC 62133</span>
+                                    
                                 </div>
                                 <input type="text" placeholder="Add new certification" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                             </div>
